# c3schedule

./: .gitignore  default.nix  pyproject.toml  requirements.txt  run.sh  shell.nix  sopel-flood.patch  sopel.conf.template
modules/: c3schedule_irc_tests.py
modules/c3schedule_irc/: __init__.py
nix/: default.nix  sources.json
