[tool.poetry]
name = "c3schedule-irc"
version = "0.1.0"
description = ""
authors = ["Andreas Rammhold <andreas@rammhold.de>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"
pendulum = "<2"
Jinja2 = "^2.10"
python-dateutil = "^2.8"
sopel = "^6.6.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
